--- a/configuration.org
+++ b/configuration.org
@@ -252,10 +252,13 @@ faces and the like are done here
 
 ** Monokai theme
 
+[[https://github.com/belak/emacs-monokai-pro-theme][belak/emacs-monokai-pro-theme]]
+
 #+BEGIN_SRC emacs-lisp
 (setq monokai-dir
       (expand-file-name "themes/monokai-emacs/" user-emacs-directory))
 (add-to-list 'custom-theme-load-path monokai-dir)
+(add-to-list 'load-path monokai-dir)
 ;; (load-theme 'monokai t)
 #+END_SRC
 
